[gd_scene load_steps=7 format=3 uid="uid://bewkm8xvh732t"]

[ext_resource type="Script" path="res://source/fallmon/scripts/hud.gd" id="1_jonow"]
[ext_resource type="Texture2D" uid="uid://da48oo3dvqrou" path="res://assets/graphics/ui/hud.png" id="2_31fvj"]
[ext_resource type="Texture2D" uid="uid://dddmnja1xx4cc" path="res://assets/graphics/portraits/snivy.png" id="2_i1chv"]
[ext_resource type="Texture2D" uid="uid://dtbnfthytefxr" path="res://assets/graphics/ui/hp.png" id="4_1hsf7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5wo2"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v1pc5"]
bg_color = Color(0, 1, 0.564706, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -113.0
offset_right = 432.0
grow_vertical = 0
script = ExtResource("1_jonow")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
offset_right = 381.0
offset_bottom = 113.0

[node name="front" type="Sprite2D" parent="NinePatchRect"]
position = Vector2(190, 65.5)
texture = ExtResource("2_31fvj")

[node name="portrait" type="Sprite2D" parent="NinePatchRect/front"]
position = Vector2(-138.5, 5)
scale = Vector2(1.525, 1.525)
texture = ExtResource("2_i1chv")
hframes = 20

[node name="healthBar" type="TextureProgressBar" parent="NinePatchRect"]
layout_mode = 0
offset_left = 125.0
offset_top = 79.0
offset_right = 357.0
offset_bottom = 97.0
min_value = 100.0
value = 100.0
texture_progress = ExtResource("4_1hsf7")

[node name="ProgressBar" type="ProgressBar" parent="NinePatchRect"]
layout_mode = 0
offset_left = 125.0
offset_top = 100.0
offset_right = 357.0
offset_bottom = 104.0
theme_override_styles/background = SubResource("StyleBoxFlat_s5wo2")
theme_override_styles/fill = SubResource("StyleBoxFlat_v1pc5")
min_value = 100.0
value = 100.0
show_percentage = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
